--- a/hello-next/.gitignore
+++ b/hello-next/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+# prisma lcoal db
+deb.db
+
 # dependencies
 /node_modules
 /.pnp
